...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.spiritwisestudios.inkrollers.GameView
      android:id="@+id/game_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />
...
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="16dp" />

  <com.spiritwisestudios.inkrollers.InkHudView
      android:id="@+id/ink_hud_view"
      android:layout_width="80dp"
      android:layout_height="150dp"
      app:layout_constraintTop_toBottomOf="@id/coverage_hud_view"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginTop="64dp" />
...
