...
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Player Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Catch Phrase -->
...
            app:layout_constraintTop_toBottomOf="@id/recycler_friends"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Save Button -->
        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Save Profile"
            app:layout_constraintTop_toBottomOf="@id/input_layout_add_friend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
