...
                        android:layout_marginEnd="6dp"
                        android:background="@drawable/cancel_button_background"
                        android:textColor="@android:color/white"
                        android:minHeight="@dimen/match_settings_button_height" />

                    <Button
                        android:id="@+id/button_host_game"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Host Game"
                        android:textSize="@dimen/match_settings_button_text_size"
                        android:textStyle="bold"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/play_button_background"
                        android:textColor="@android:color/white"
                        android:minHeight="@dimen/match_settings_button_height" />
...
